did Task 2 Assignment C

--- a/Task 2/AssignmentC.html
+++ b/Task 2/AssignmentC.html
@@ -7,5 +7,34 @@
 </head>
 <body>
 
+<div class="page">
+    <div class="banner">banner</div>
+    <h2>Header 1</h2>
+    <p>I'm baby labore coloring book typewriter in shoreditch aliqua aesthetic prism. Single-origin coffee ethical
+        hoodie, lo-fi PBR&B man bun hammock helvetica proident everyday carry voluptate. Bushwick af pariatur narwhal,
+        culpa shabby chic keffiyeh chia ennui ex cronut disrupt. Shoreditch taiyaki veniam palo santo eu, kinfolk
+        normcore bushwick. Raw denim voluptate ea officia franzen. <a href="https://wotw.orirando.com/seedgen">link</a>
+    </p>
+    <h2>Header 2</h2>
+    <p>Photo booth post-ironic DIY, fashion axe food truck veniam id listicle ennui synth reprehenderit distillery eu.
+        8-bit blue bottle copper mug normcore put a bird on it vape. In post-ironic vape, kale chips ullamco meditation
+        try-hard voluptate messenger bag do tbh stumptown dolore fingerstache. Roof party cronut seitan ethical cornhole
+        humblebrag disrupt gluten-free commodo umami forage proident prism master cleanse voluptate. <a
+                href="https://wotw.orirando.com/seedgen">link</a>
+    </p>
+    <h2>Header 3</h2>
+    <p>Tempor pug hexagon glossier poke laboris craft beer tote bag excepteur distillery fashion axe fixie affogato do
+        nostrud. Elit trust fund pickled kickstarter sartorial, blog kitsch proident master cleanse artisan. Qui mixtape
+        single-origin coffee fanny pack asymmetrical literally. Neutra cold-pressed cloud bread in. <a
+                href="https://wotw.orirando.com/seedgen">link</a>
+    </p>
+    <h2>Header 4</h2>
+    <p>Typewriter hashtag tote bag, cornhole fugiat echo park man braid hell of kitsch mumblecore. Irure typewriter
+        commodo excepteur YOLO vaporware pitchfork thundercats vegan velit cronut poutine exercitation flexitarian. In
+        knausgaard umami, dolor DIY four loko irure iceland live-edge. Meditation dolor PBR&B ramps 3 wolf moon minim.
+        Skateboard direct trade craft beer man bun biodiesel selvage qui keytar vexillologist austin dolore. <a
+                href="https://wotw.orirando.com/seedgen">link</a>
+    </p>
+</div>
 </body>
 </html>
