--- a/Task 3/index.html
+++ b/Task 3/index.html
@@ -6,24 +6,70 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="header">
-    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1057090/capsule_616x353.jpg?t=1612897638" alt="" class="headerImage">
+<header>
+    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1057090/capsule_616x353.jpg?t=1612897638" alt=""
+         class="headerImage">
     <h1 class="below"> Ori and the will of the wisps</h1>
-</div>
-<div class="gallery">
-    <figure>
-        <img class="gallery" src="https://img.g2a.com/1920x1080/1x1x0/ori-and-the-will-of-the-wisps-steam-gift-europe/5df750f67e696c4722592312" alt="">
-        <figcaption>ori and ku flying through niwen</figcaption>
-    </figure>
-    <figure>
-        <img class="gallery" src="https://img.ppe.pl/upload/editor/images/wojtek/Grafiki%202020.1/58/Ori%20and%20the%20Will%20of%20the%20Wisps%20%E2%80%93%20recenzja%20gry%201.jpg" alt="">
-        <figcaption>ori talking to kwolok</figcaption>
-    </figure>
-    <figure>
-        <img class="gallery" src="https://miro.medium.com/max/1024/0*xHtGG9dI-nXIl5Un.jpg" alt="">
-        <figcaption>spirit willow</figcaption>
-    </figure>
-</div>
-<div class="textSection">amogus</div>
+</header>
+<main>
+    <div class="gallery">
+        <figure>
+            <img class="galleryImage"
+                 src="https://img.g2a.com/1920x1080/1x1x0/ori-and-the-will-of-the-wisps-steam-gift-europe/5df750f67e696c4722592312"
+                 alt="ori and ku flying through niwen">
+            <figcaption>ori and ku flying through niwen</figcaption>
+        </figure>
+        <figure>
+            <img class="galleryImage"
+                 src="https://img.ppe.pl/upload/editor/images/wojtek/Grafiki%202020.1/58/Ori%20and%20the%20Will%20of%20the%20Wisps%20%E2%80%93%20recenzja%20gry%201.jpg"
+                 alt="ori talking to kwolok">
+            <figcaption>ori talking to kwolok</figcaption>
+        </figure>
+        <figure>
+            <img class="galleryImage" src="https://miro.medium.com/max/1024/0*xHtGG9dI-nXIl5Un.jpg" alt="spirit willow">
+            <figcaption>spirit willow</figcaption>
+        </figure>
+    </div>
+    <div class="textSection">
+        <p>I'm baby +1 fingerstache farm-to-table coloring book. Etsy kickstarter pickled, salvia intelligentsia hexagon
+            four dollar toast kitsch portland sartorial next level 90's art party. Gluten-free hot chicken lumbersexual
+            adaptogen fingerstache vinyl neutra single-origin coffee chartreuse. Direct trade succulents small batch,
+            seitan palo santo heirloom put a bird on it leggings pour-over typewriter mlkshk selfies. Ugh actually
+            copper mug air plant taxidermy microdosing 8-bit knausgaard echo park skateboard cornhole. Typewriter four
+            dollar toast cred lumbersexual.
+        </p><p>
+            Gastropub normcore VHS lyft cloud bread selvage yuccie. Dreamcatcher cred ugh, ethical typewriter celiac
+            disrupt literally everyday carry swag. Iceland hammock put a bird on it drinking vinegar wolf pitchfork
+            gochujang master cleanse mixtape YOLO selfies edison bulb. Sriracha leggings pitchfork tofu. Cliche occupy
+            wolf, craft beer hexagon four loko air plant flexitarian PBR&B kogi af biodiesel. Taxidermy letterpress deep
+            v narwhal waistcoat green juice austin brunch 3 wolf moon flannel chambray VHS crucifix.
+        </p><p>
+            Quinoa hexagon poutine distillery pickled. Swag brooklyn narwhal jianbing microdosing gastropub, polaroid
+            hoodie poutine fingerstache organic marfa seitan keytar pickled. Echo park viral hell of, pok pok swag
+            franzen disrupt DIY jianbing deep v pour-over +1. Gastropub vaporware tote bag, flexitarian 8-bit butcher
+            prism next level pork belly meggings put a bird on it coloring book activated charcoal. Echo park fixie 90's
+            la croix snackwave.
+        </p><p>
+            Tumeric bespoke snackwave, whatever dreamcatcher humblebrag iPhone cronut. Schlitz taxidermy artisan wolf
+            whatever iPhone snackwave af yr DIY. Dreamcatcher shaman post-ironic single-origin coffee tattooed.
+            Adaptogen bushwick godard taiyaki keffiyeh everyday carry af, iceland cred. Street art scenester lo-fi
+            brunch everyday carry edison bulb raclette tilde bicycle rights hella waistcoat hashtag man bun. Venmo la
+            croix cold-pressed DIY, whatever stumptown kitsch taxidermy craft beer four dollar toast trust fund. Vinyl
+            migas dreamcatcher copper mug beard.
+        </p><p>
+            Brooklyn wolf VHS, art party 90's direct trade flannel meditation coloring book trust fund pabst
+            cold-pressed stumptown. Man bun pork belly blue bottle, gochujang forage tofu poke jean shorts. Snackwave
+            authentic fam cold-pressed shabby chic, ramps etsy tousled single-origin coffee everyday carry chia fanny
+            pack pickled. Seitan next level quinoa four dollar toast narwhal neutra. Lumbersexual bespoke schlitz
+            shoreditch jianbing cliche ramps coloring book before they sold out gentrify put a bird on it.
+        </p><p>
+            Truffaut banh mi activated charcoal, kogi blue bottle listicle humblebrag post-ironic. Flexitarian XOXO
+            kogi, hashtag cray lomo green juice. Bespoke 3 wolf moon flannel asymmetrical. Air plant humblebrag iPhone
+            paleo jianbing.</p>
+    </div>
+</main>
+<footer>
+    Ori 3 when?
+</footer>
 </body>
 </html>
