learned how to read the task details correctly

--- a/Task 3/index.html
+++ b/Task 3/index.html
@@ -33,33 +33,35 @@
     <div class="textSection">
         <p>I'm baby +1 fingerstache farm-to-table coloring book. Etsy kickstarter pickled, salvia intelligentsia hexagon
             four dollar toast kitsch portland sartorial next level 90's art party. Gluten-free hot chicken lumbersexual
-            adaptogen fingerstache vinyl neutra single-origin coffee chartreuse. Direct trade succulents small batch,
+            adaptogen fingerstache </p><img class="textImage" src="https://www.windowscentral.com/sites/wpcentral.com/files/styles/xlarge/public/field/image/2020/03/ori-and-the-will-of-the-wisps-review-pics_6.jpg" alt="baur"><p>
+            vinyl neutra single-origin coffee chartreuse. Direct trade succulents small batch,
             seitan palo santo heirloom put a bird on it leggings pour-over typewriter mlkshk selfies. Ugh actually
             copper mug air plant taxidermy microdosing 8-bit knausgaard echo park skateboard cornhole. Typewriter four
             dollar toast cred lumbersexual.
         </p><p>
             Gastropub normcore VHS lyft cloud bread selvage yuccie. Dreamcatcher cred ugh, ethical typewriter celiac
             disrupt literally everyday carry swag. Iceland hammock put a bird on it drinking vinegar wolf pitchfork
-            gochujang master cleanse mixtape YOLO selfies edison bulb. Sriracha leggings pitchfork tofu. Cliche occupy
+            gochujang master cleanse mixtape YOLO selfies </p><blockquote>edison</blockquote><p> bulb. Sriracha leggings pitchfork tofu. Cliche occupy
             wolf, craft beer hexagon four loko air plant flexitarian PBR&B kogi af biodiesel. Taxidermy letterpress deep
             v narwhal waistcoat green juice austin brunch 3 wolf moon flannel chambray VHS crucifix.
         </p><p>
             Quinoa hexagon poutine distillery pickled. Swag brooklyn narwhal jianbing microdosing gastropub, polaroid
             hoodie poutine fingerstache organic marfa seitan keytar pickled. Echo park viral hell of, pok pok swag
-            franzen disrupt DIY jianbing deep v pour-over +1. Gastropub vaporware tote bag, flexitarian 8-bit butcher
+            franzen disrupt DIY jianbing </p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4-ZogJGmBwc1prdJVzo_L-oN56dSqUohdcw&usqp=CAU" alt="luma pools tree" class="textImage"><p> deep v pour-over +1. Gastropub vaporware tote bag, flexitarian 8-bit butcher
             prism next level pork belly meggings put a bird on it coloring book activated charcoal. Echo park fixie 90's
             la croix snackwave.
         </p><p>
             Tumeric bespoke snackwave, whatever dreamcatcher humblebrag iPhone cronut. Schlitz taxidermy artisan wolf
             whatever iPhone snackwave af yr DIY. Dreamcatcher shaman post-ironic single-origin coffee tattooed.
-            Adaptogen bushwick godard taiyaki keffiyeh everyday carry af, iceland cred. Street art scenester lo-fi
+            Adaptogen bushwick godard </p><blockquote>taiyaki</blockquote><p> keffiyeh everyday carry af, iceland cred. Street art scenester lo-fi
             brunch everyday carry edison bulb raclette tilde bicycle rights hella waistcoat hashtag man bun. Venmo la
             croix cold-pressed DIY, whatever stumptown kitsch taxidermy craft beer four dollar toast trust fund. Vinyl
             migas dreamcatcher copper mug beard.
         </p><p>
             Brooklyn wolf VHS, art party 90's direct trade flannel meditation coloring book trust fund pabst
-            cold-pressed stumptown. Man bun pork belly blue bottle, gochujang forage tofu poke jean shorts. Snackwave
-            authentic fam cold-pressed shabby chic, ramps etsy tousled single-origin coffee everyday carry chia fanny
+            cold-pressed stumptown. </p><blockquote>Man bun</blockquote><p>  pork belly blue bottle, gochujang forage tofu poke jean shorts. Snackwave
+            authentic fam cold-pressed shabby chic, ramps etsy tousled single-origin </p><img src="https://s.cdaction.pl/obrazki//OriandtheWilloftheWisps_Screenshot_01_17ate.png" alt="prologue scene"
+                                                                                          class="textImage"><p> coffee everyday carry chia fanny
             pack pickled. Seitan next level quinoa four dollar toast narwhal neutra. Lumbersexual bespoke schlitz
             shoreditch jianbing cliche ramps coloring book before they sold out gentrify put a bird on it.
         </p><p>
